objects/kugo2p__TaxLocation__c.object
<CustomObject>
    <description>Kugamon - Related object to Kugamon Settings to store tax jurisdiction. For Admin use only.</description>
    <fields>
        <fullName>kugo2p__Description__c</fullName>
        <label>Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kugo2p__KugamonSetting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Kugamon Setting</label>
        <referenceTo>kugo2p__KugamonSetting__c</referenceTo>
        <relationshipLabel>Tax Locations</relationshipLabel>
        <relationshipName>Tax_Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kugo2p__TaxAccountingGroup__c</fullName>
        <label>Tax Accounting Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business Sale</fullName>
                </value>
                <value>
                    <fullName>Consumer Sale</fullName>
                </value>
                <value>
                    <fullName>Internal Sale</fullName>
                </value>
                <value>
                    <fullName>Reseller Sale</fullName>
                </value>
                <value>
                    <fullName>Partner Sale</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>kugo2p__TaxableExcise__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Taxable Excise</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__TaxableSales__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Taxable Sales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kugo2p__TaxableUsage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Taxable Usage</label>
        <type>Checkbox</type>
    </fields>
    <label>Tax Location</label>
    <nameField>
        <label>Tax Location</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tax Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>kugo2p__CheckOneBox</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( kugo2p__TaxableExcise__c = false, kugo2p__TaxableSales__c = false, kugo2p__TaxableUsage__c = false)</errorConditionFormula>
        <errorMessage>Please Select At Least 1 Tax Checkbox</errorMessage>
    </validationRules>
</CustomObject>